// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connected ChatListItem renders correctly when channel is a group 1`] = `
<div>
  <li
    class="MuiListItem-container"
  >
    <div
      aria-disabled="false"
      class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction"
      role="button"
      tabindex="0"
    >
      <div
        class="makeStyles-avatarContainer-15"
      >
        <div
          class="makeStyles-container-20"
        >
          <div
            class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-icon-21"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11.99 2c-5.52 0-10 4.48-10 10s4.48 10 10 10 10-4.48 10-10-4.48-10-10-10zm3.61 6.34c1.07 0 1.93.86 1.93 1.93 0 1.07-.86 1.93-1.93 1.93-1.07 0-1.93-.86-1.93-1.93-.01-1.07.86-1.93 1.93-1.93zm-6-1.58c1.3 0 2.36 1.06 2.36 2.36 0 1.3-1.06 2.36-2.36 2.36s-2.36-1.06-2.36-2.36c0-1.31 1.05-2.36 2.36-2.36zm0 9.13v3.75c-2.4-.75-4.3-2.6-5.14-4.96 1.05-1.12 3.67-1.69 5.14-1.69.53 0 1.2.08 1.9.22-1.64.87-1.9 2.02-1.9 2.68zM11.99 20c-.27 0-.53-.01-.79-.04v-4.07c0-1.42 2.94-2.13 4.4-2.13 1.07 0 2.92.39 3.84 1.15-1.17 2.97-4.06 5.09-7.45 5.09z"
              />
            </svg>
          </div>
          <span
            class="makeStyles-dotContainer-22"
          >
            <span
              class="makeStyles-dot-23 makeStyles-dot_active-24 "
              title="Common:Active"
            />
          </span>
        </div>
      </div>
      <div
        class="MuiListItemText-root MuiListItemText-multiline"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          <span
            class="makeStyles-textContainer-16"
            title="Channel 1"
          >
            <span
              class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextPrimary MuiTypography-noWrap MuiTypography-displayInline"
            >
              Channel 1
            </span>
            <span
              class="MuiTypography-root MuiTypography-caption MuiTypography-colorInherit MuiTypography-displayInline"
            >
              04/12/2021
            </span>
          </span>
        </span>
        <p
          class="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          <span
            class="makeStyles-textContainer-16"
            title="Test message 1"
          >
            <span
              class="MuiTypography-root makeStyles-secondaryText-17 MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-noWrap MuiTypography-displayInline"
            >
              Test message 1
            </span>
            <span
              class="MuiTypography-root MuiTypography-caption MuiTypography-colorInherit MuiTypography-displayInline"
            >
              <span
                class="MuiBadge-root makeStyles-unreadBadge-19"
              >
                <span
                  class="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorPrimary"
                >
                  2
                </span>
              </span>
            </span>
          </span>
        </p>
      </div>
      <span
        class="MuiTouchRipple-root"
      />
    </div>
    <div
      class="MuiListItemSecondaryAction-root"
    >
      <button
        aria-controls="cli-menu-channel-1"
        aria-haspopup="true"
        aria-label="options"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </li>
</div>
`;

exports[`Connected ChatListItem renders correctly when channel is not a group 1`] = `
<div>
  <div
    aria-disabled="false"
    class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
    role="button"
    tabindex="0"
  >
    <div
      class="makeStyles-avatarContainer-1"
    >
      <div
        class="makeStyles-container-6"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-icon-7"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
            />
          </svg>
        </div>
        <span
          class="makeStyles-dotContainer-8"
        >
          <span
            class="makeStyles-dot-9 makeStyles-dot_active-10 "
            title="Common:Active"
          />
        </span>
      </div>
    </div>
    <div
      class="MuiListItemText-root MuiListItemText-multiline"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
      >
        <span
          class="makeStyles-textContainer-2"
          title="Channel 1"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextPrimary MuiTypography-noWrap MuiTypography-displayInline"
          >
            Channel 1
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-colorInherit MuiTypography-displayInline"
          >
            04/12/2021
          </span>
        </span>
      </span>
      <p
        class="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
      >
        <span
          class="makeStyles-textContainer-2"
          title="Test message 1"
        >
          <span
            class="MuiTypography-root makeStyles-secondaryText-3 MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-noWrap MuiTypography-displayInline"
          >
            Test message 1
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-colorInherit MuiTypography-displayInline"
          >
            <span
              class="MuiBadge-root makeStyles-unreadBadge-5"
            >
              <span
                class="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorPrimary"
              >
                2
              </span>
            </span>
          </span>
        </span>
      </p>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </div>
</div>
`;
